[package]
name = "webassembly-org"
version = "0.1.0"
authors = ["J.R. Rodriguez <jrodriguez18@gmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/soyjoseroberto/webassembly-org.git"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
